--- a/src/Avanade.SubTCSE.Projeto.Domain/Avanade.SubTCSE.Projeto.Domain.csproj
+++ b/src/Avanade.SubTCSE.Projeto.Domain/Avanade.SubTCSE.Projeto.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.2.3" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.4" />
   </ItemGroup>
 
 </Project>
