--- a/src/Avanade.SubTCSE.Projeto.Api/Avanade.SubTCSE.Projeto.Api.csproj
+++ b/src/Avanade.SubTCSE.Projeto.Api/Avanade.SubTCSE.Projeto.Api.csproj
@@ -7,8 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Avanade.Sub.TCSE.Projeto.Application\Avanade.SubTCSE.Projeto.Application.csproj" />
+    <ProjectReference Include="..\Avanade.SubTCSE.Projeto.CrossCutting\Avanade.SubTCSE.Projeto.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
