--- a/src/Avanade.SubTCSE.Projeto.CrossCutting/Avanade.SubTCSE.Projeto.Infra.CrossCutting.csproj
+++ b/src/Avanade.SubTCSE.Projeto.CrossCutting/Avanade.SubTCSE.Projeto.Infra.CrossCutting.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Avanade.Sub.TCSE.Projeto.Application\Avanade.SubTCSE.Projeto.Application.csproj" />
+    <ProjectReference Include="..\Avanade.SubTCSE.Projeto.Data\Avanade.SubTCSE.Projeto.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
